// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When the form is submitted <ForgotPasswordPage /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForgotPasswordPage
    handleSubmit={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "handleChange": [Function],
      "handleSubmit": [Function],
      "id": "materialLoginFormEmail",
      "innerHTML": "RESET",
      "name": "email",
      "placeholder": "Email",
      "title": "Reset Password Link",
      "type": "email",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "handleChange": [Function],
        "handleSubmit": [Function],
        "id": "materialLoginFormEmail",
        "innerHTML": "RESET",
        "name": "email",
        "placeholder": "Email",
        "title": "Reset Password Link",
        "type": "email",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`When the form is submitted <ForgotPasswordPage /> renders the component 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChangePasswordPage
    handleSubmit={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <FormLayout
        handleChange={[Function]}
        handleSubmit={[Function]}
        id="materialLoginFormPassword1"
        innerHTML="SUBMIT"
        name="password"
        placeholder="New Password"
        title="Change Password"
        type="password"
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "handleChange": [Function],
        "handleSubmit": [Function],
        "id": "materialLoginFormPassword1",
        "innerHTML": "SUBMIT",
        "name": "password",
        "placeholder": "New Password",
        "title": "Change Password",
        "type": "password",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <FormLayout
          handleChange={[Function]}
          handleSubmit={[Function]}
          id="materialLoginFormPassword1"
          innerHTML="SUBMIT"
          name="password"
          placeholder="New Password"
          title="Change Password"
          type="password"
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "handleChange": [Function],
          "handleSubmit": [Function],
          "id": "materialLoginFormPassword1",
          "innerHTML": "SUBMIT",
          "name": "password",
          "placeholder": "New Password",
          "title": "Change Password",
          "type": "password",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
